--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,39 +23,11 @@
             android:layout_height="0dp"
             android:background="@drawable/gradient"
             android:padding="16dp"
-            app:layout_constraintDimensionRatio="16:10"
+            app:layout_constraintDimensionRatio="16:6"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/imageViewAvatar"
-                android:layout_width="86dp"
-                android:layout_height="86dp"
-                android:layout_above="@+id/textViewName"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/ic_launcher_playstore"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:fontFamily="@font/rubik_bold"
-                android:gravity="start|center"
-                android:text="Аккаунт создан"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
-                app:layout_constraintTop_toTopOf="@+id/imageViewAvatar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -66,7 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layoutHeader">
+            app:layout_constraintTop_toBottomOf="@+id/textViewName">
 
             <TextView
                 android:id="@+id/textViewDesc"
@@ -75,7 +47,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:fontFamily="@font/rubik_light"
-                android:gravity="start|center"
+                android:gravity="center"
                 android:text="В этом тексте +- 150 символов В этом тексте ровно 150 символов В этом тексте ровн"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/darkGray"
@@ -130,6 +102,34 @@
 
             </com.google.android.material.chip.ChipGroup>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <ImageView
+            android:id="@+id/imageViewAvatar"
+            android:layout_width="86dp"
+            android:layout_height="86dp"
+            android:layout_above="@+id/textViewName"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/ic_launcher_playstore"
+            app:layout_constraintBottom_toBottomOf="@+id/layoutHeader"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/layoutContent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />
+
+        <TextView
+            android:id="@+id/textViewName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/rubik_bold"
+            android:gravity="center"
+            android:text="Аккаунт создан"
+            android:layout_marginTop="16dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
